EES-6553 - Stop buttons overlapping ontop of each other when reordering filters and indicators when the display resolution is mobile or when zoomed in at 400%.

--- a/src/explore-education-statistics-common/src/components/ReorderableItem.module.scss
+++ b/src/explore-education-statistics-common/src/components/ReorderableItem.module.scss
@@ -41,10 +41,15 @@
 }
 
 .controls {
-  min-height: 38px; // to make correct height if arrow buttons not present.
-  position: absolute;
-  right: govuk-spacing(1);
-  top: govuk-spacing(2);
+  padding: govuk-spacing(2);
+
+  @include govuk-media-query($from: tablet) {
+    min-height: 38px; // to make correct height if arrow buttons not present.
+    position: absolute;
+    right: govuk-spacing(1);
+    top: govuk-spacing(2);
+    padding: 0;
+  }
 }
 
 .itemLabel {
